# HAAR-Remote-Control

./: Dockerfile  LICENSE  README.md  docker-compose.yml  example.config.yml  lia_car.service  pyproject.toml  run.py
camera_presence/: __main__.py  cascade.xml  cascade_2.xml  cascade_3.xml  detection.py  motor_control.py
camera_presence/static/: index.html
docs/: haar_cascade_training.md
haar_training_data/placa_pare/n/: negatives.txt
